--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ a {
 
 ul {
   list-style: none;
+  padding: 0;
 }
 
 header {
@@ -223,15 +224,19 @@ header nav.navigation .nav-link:hover::after {
   font-weight: bold;
   line-height: 53px;
   color: #323232;
-  height: 88px;
   margin-bottom: 40px;
 }
 .about-us .about-us__wrapper .about-us__info .about-us__text {
   font-size: 16px;
   line-height: 25px;
   color: #999999;
-  height: 117px;
   margin-bottom: 30px;
+}
+.about-us .about-us__wrapper .about-us__info .about-us__more {
+  font-size: 16px;
+  line-height: 20px;
+  color: #4985ff;
+  text-decoration: underline;
 }
 .about-us .about-us__projects-list {
   display: flex;
@@ -251,6 +256,20 @@ header nav.navigation .nav-link:hover::after {
 .about-us .about-us__projects-list .projects__item .item__info {
   font-size: 36px;
   padding-left: 50px;
+}
+.about-us .about-us__projects-list .projects__item .item__info::before {
+  content: "";
+  position: absolute;
+  background-image: url(./images/projects-item__image.png);
+  width: 30px;
+  height: 30px;
+  left: 0;
+  top: 8.8px;
+}
+.about-us .about-us__projects-list .projects__item .item__slogan {
+  font-size: 16px;
+  line-height: 25px;
+  color: #999999;
 }
 
 .specialisation {
