--- a/style.css
+++ b/style.css
@@ -112,7 +112,7 @@ header nav.navigation .nav-link:hover::after {
 }
 
 .services {
-  height: 703px;
+  min-height: 703px;
   background: #fff;
   position: relative;
   display: flex;
@@ -127,6 +127,7 @@ header nav.navigation .nav-link:hover::after {
   color: #323232;
   width: 739px;
   text-align: center;
+  margin-top: 110px;
   margin-bottom: 50px;
 }
 .services .slogan--description {
@@ -138,20 +139,18 @@ header nav.navigation .nav-link:hover::after {
   margin-bottom: 70px;
 }
 .services .services__list {
+  width: 1110px;
+  margin: 0 auto;
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: row;
+  flex-wrap: wrap;
 }
 .services .services__list .services__item {
-  width: 353px;
-  height: 139px;
+  width: calc(100% / 3 - 18px);
   position: relative;
   margin-bottom: 55px;
-  margin-right: 30px;
-}
-.services .services__list .services__item:last-child {
-  margin-right: 0;
 }
 .services .services__list .services__item .services__subtitle {
   width: 223px;
@@ -201,6 +200,7 @@ header nav.navigation .nav-link:hover::after {
   padding: 13px 36px 15px;
   font-weight: 500;
   line-height: 20px;
+  margin-bottom: 105px;
 }
 
 .about-us {
@@ -237,11 +237,14 @@ header nav.navigation .nav-link:hover::after {
   font-size: 16px;
   line-height: 25px;
   color: #999999;
+  overflow: hidden;
+  max-height: 117px;
   margin-bottom: 30px;
 }
 .about-us .about-us__wrapper .about-us__info .about-us__more {
   font-size: 16px;
   line-height: 20px;
+  font-weight: 500;
   color: #4985ff;
   text-decoration: underline;
 }
@@ -284,10 +287,9 @@ header nav.navigation .nav-link:hover::after {
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  height: 972px;
+  min-height: 972px;
   position: relative;
   border-bottom: 1px solid #e0e0e0;
-  margin-bottom: 85px;
 }
 .all-services::before {
   content: "";
@@ -306,6 +308,7 @@ header nav.navigation .nav-link:hover::after {
   justify-content: space-between;
   flex-direction: row;
   position: relative;
+  margin-top: 84px;
   margin-bottom: 70px;
 }
 .all-services .all-services__main .all-services__slogan {
@@ -336,11 +339,12 @@ header nav.navigation .nav-link:hover::after {
   align-items: center;
   justify-content: space-between;
   flex-direction: row;
+  margin-bottom: 85px;
+  flex-wrap: wrap;
   border-bottom: 1px solid #e0e0e0;
 }
 .all-services .all-srvices__list .all-services__item {
   width: calc(100% / 3 - 20px);
-  height: 544px;
   margin-bottom: 85px;
 }
 .all-services .all-srvices__list .all-services__item .all-services__image {
